--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "event-stream": "^3.2.2",
     "express": "^4.12.0",
     "gulp": "^3.8.11",
-    "gulp-cache-bust": "^1.1.0",
     "gulp-buster": "^1.1.0",
+    "gulp-cache-bust": "^1.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
@@ -45,8 +45,8 @@
     "less": "^2.4.0",
     "mocha": "^2.1.0",
     "selenium-webdriver": "^2.45.0",
-    "swagger-client": "git+https://github.com/jensoleg/swagger-js.git",
-    "swagger-cli": "1.0.0-beta.2"
+    "swagger-cli": "1.0.0-beta.2",
+    "swagger-client": "git+https://github.com/jensoleg/swagger-js.git"
   },
   "dependencies": {
     "clipboard": "^1.6.0"
